2007-03-05  Andrew Lunn <andrew.lunn@ascom.ch>

	* include/var_io.h: Fix a few typos pointed out by
	Igor B. Poretsky.
	
2007-02-13  John Eigelaar <jeigelaar@mweb.co.za>
 
 	* include/var_io.h: Fixed up the EMAC definitions to work
 	with the brand new EMAC driver  

2007-02-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h: Added PWM registers.

2007-01-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h (AT91_PITC_VALUE_MASK): New - mask to access
	the PITC value which is a 20 bit number.
	* src/timer_pit.c: Change all hard coded mask for the period, 
	some of which were wrong, to use AT91_PITC_VALUE_MASK. 
	When initializing the PIT, remember to decrement the period first.
	Bugs found by Jim Seymour.

2006-09-08  John Eigelaar <jeigelaar@mweb.co.za>

	* include/var_io.h: Added definition for SPI MODFDIS bit 

2006-08-31  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/at91_misc.c: Now also resets external circuitry via
	AT91_WD_OMR_EXTEN
	
2006-06-01  John Eigelaar <jeigelaar@mweb.co.za>

	* include/var_io.h: Added SPI PDC register definitions 

2006-05-20  John Eigelaar <jeigelaar@mweb.co.za>

	* include/var_io.h: AT91SAM7X pin definitions
	* include/hal_platform_int.h: AT91SAM7X interrupts
	* include/plf_io.h: AT91SAM7X device addresses.

2006-05-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_arm_at91sam7s.cdl: Rename to AT91SAM7 and add support
	for AT91SAM7X, based on code from John Eigelaar.
	* include/var_io.h: add CAN, TWI and ADC registers.
	
2006-05-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h: Add macros to manipulate the PIO controllers.

2006-05-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h: Added the Ethernet MAC registers. 

2006-04-26  John Eigelaar <jeigelaar@mweb.co.za>

	* include/var_io.h: Fix typo's in the USB register definitions 
	and add definitions for the S2C controller. 
	
2006-03-10  Oliver Munz  <munz@speag.ch>

	* src/timer_pit.c: fix hal_delay_us(). hal_clock_read for